fixed z-index error in com-hub

--- a/packages/one-communication/communication_main.less
+++ b/packages/one-communication/communication_main.less
@@ -11,7 +11,7 @@
 	margin-left: -15px;
 	overflow: hidden;
 	transition: width 350ms ease-out 50ms;
-	z-index: 2;
+	z-index: 3;
 	.message-board {
 		position: relative;
 		float: left;
